# reffer

./: Home.py  README.md  main.py  pyproject.toml
api/models/: base.py  bib.py
api/responses/: bib.py
api/services/: balanced.py  bib.py  parser.py
pages/: Parse.py  Search.py  Upload.py
