[project]
name = "reffer"
version = "0.1.0"
description = "A community based open source reference solution, specially for LaTeX."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bibtexparser>=1.4.3",
    "polars>=1.25.2",
    "pydantic>=2.10.6",
    "pymongo[encryption,zstd]>=4.11.3",
    "streamlit>=1.43.2",
]

[tool.uv.sources]
bibtexparser = { git = "https://github.com/sciunto-org/python-bibtexparser", rev = "main" }

[dependency-groups]
sanity = [
    "bandit>=1.8.3",
    "ruff>=0.11.2",
]
typing = [
    "mypy>=1.15.0",
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
line-ending = "auto"
docstring-code-line-length = "dynamic"


[[tool.mypy.overrides]]
module = "bibtexparser"
ignore_missing_imports = true


[[tool.mypy.overrides]]
module = "bson"
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
